# cookiecutter-backend-starter-app-python

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  build_deploy.sh  catalog-info.yaml  clowdapp.yaml  cookiecutter.json  manage.py  mkdocs.yml  pyproject.toml
.github/: .codecov.yml
.github/workflows/: ci.yml
backend_starter_app/: settings.py  urls.py
backend_starter_app/backend_starter_app/: settings.py  urls.py
hooks/: post_gen_project.py
src/backend_starter_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: bonfire_config
{{cookiecutter.project_name}}/: .bonfirecfg.yaml  .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cdappconfig.json  clowdapp.yaml  manage.py  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/middleware/: healthcheckmiddleware.py  metricsmiddleware.py
