[project]
name = "backend-starter-app"
description = "A barebones python app"
version = "0.0.1"
dependencies = [
    "djangorestframework",
    "markdown",
    "django-filter"
]

[project.optional-dependencies]
dev = ["pre-commit", "coverage"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
