[project]
name = "{{cookiecutter.project_name | replace("_", "-")}}"
description = "A barebones python app"
version = "0.0.1"
dependencies = [
    "djangorestframework",
    "markdown",
    "django-filter",
    "prometheus-client",
]

[project.optional-dependencies]
dev = ["pre-commit", "coverage", "crc-bonfire"]

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"
