[project]
name = "{{cookiecutter.project_name | replace("_", "-")}}"
description = "A barebones python app"
version = "0.0.1"
dependencies = [
    "djangorestframework",
    "markdown",
    "django-filter",
    "app-common-python>=0.2.6"
    "django-prometheus",
    "python-json-logger",
]

[project.optional-dependencies]
dev = ["pre-commit", "coverage", "crc-bonfire"]

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"
